kubernetes-flux/blade/gateway-system/gateway-blade/resources/gateway.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json

apiVersion: "gateway.networking.k8s.io/v1"
kind: Gateway
metadata:
  name: internal
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "10.0.2.30"
  listeners:
    - name: insecure
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: default
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
